# reunion-compiler

./: .gitignore  LICENSE  README.md
docs/: 01_introduction.md  02_quickstart.md  03_syntax.md  04_plugin_anatomy.md  05_how_hooks_work.md  06_network_hooks.md  07_message_hooks.md  08_java_hooks.md  09_settings.md  10_ui.md  11_client_utils.md  12_compiler_errors.md  13_examples.md  14_telegram_classes.md  15_available_libraries.md  16_markdown_utils.md  17_hook_utils.md  18_file_utils.md
pip-package/: README.md  pyproject.toml
pip-package/compiler/src/: __init__.py  ast.py  errorFormat.py  errors.py  lexer.py  main.py  parseError.py  parser.py  token.py  tokenTypes.py
pip-package/compiler/src/analyzer/: __init__.py  analyzer.py  semanticError.py
pip-package/compiler/src/codegen/: __init__.py  generator.py
pip-package/compiler/src/parser/: __init__.py  exprParser.py  parserBase.py  stmtParser.py  topParser.py
