[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "reunionc"
version         = "0.1.0-beta"
description     = "Reunion compiler — compile .reu plugins for exteraGram/AyuGram"
readme          = "README.md"
license         = { text = "Apache-2.0" }
authors         = [{ name = "shareui" }]
requires-python = ">=3.11"
keywords        = ["extragam", "ayugram", "reunion", "compiler", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]

[project.scripts]
reuc = "compiler.src.main:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["compiler*"]

[tool.setuptools.package-data]
"compiler" = ["**/*.reu", "**/*.plugin"]
